--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,9 @@
     <string name="main_adaptive_banner">ca-app-pub-3940256099942544/6300978111</string>
     <string name="main_native_ad">ca-app-pub-3940256099942544/2247696110</string>
     <string name="main_interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="nearby_airports">Nearby Airports</string>
+    <string name="airport_name">Airport Name</string>
+    <string name="recent_search">Recent Search</string>
 
     <!--AdMob Live Ads-->
     <!--<string name="app_open_ad">ca-app-pub-9767744518035218/8087488055</string>
